--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   redis:
     image: redis:alpine
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379" # Internal only
 
   postgres:
     image: postgres:15-alpine
@@ -12,18 +12,28 @@ services:
       POSTGRES_USER: skhan
       POSTGRES_PASSWORD: password123
       POSTGRES_DB: skhan
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432" # Internal only
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   api:
     build: .
-    ports:
-      - "8080:8080"
     environment:
       - DB_HOST=postgres
       - REDIS_HOST=redis
+    expose:
+      - "8080" # No longer reachable from your host's browser!
     depends_on:
       - postgres
       - redis
+
+  # NEW: The Nginx Reverse Proxy
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - "80:80" # The only door open to the world
+    depends_on:
+      - api
